--- a/angular.json
+++ b/angular.json
@@ -78,6 +78,7 @@
           "builder": "@angular/build:karma",
           "options": {
             "tsConfig": "tsconfig.spec.json",
+            "main": "src/test.ts",
             "inlineStyleLanguage": "scss",
             "assets": [
               {
