Добавлен Dockerfile и сборка в CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: 🧪 Запустить тесты
         run: npm test -- --watch=false --browsers=ChromeHeadless
+
+      - name: 🐳 Собрать Docker-образ
+        run: docker build -t route-table-app .
